# Solana_Dice_SmartContract

./: .gitignore  1.json  Anchor.toml  README.md  package.json
cli/: command.ts  config.ts  scripts.ts  types.ts
programs/coinflip/: Cargo.toml
programs/coinflip/src/: lib.rs
programs/dice/: Cargo.toml
programs/dice/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
tests/: coinflip.ts  dice.ts
