[package]
name = "dice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dice"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["derive"] }
anchor-spl = "0.31.0"
solana-program = "2.2.1"
winnow = "=0.4.1"
toml_edit = "0.20.7"
sha2 = "0.10.6"
